Account Integration Test updates